# WinUtils

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/EnvVarEditor/: CMakeLists.txt  clslogger.h  collutil.h  cvtutil.h  evarutil.h  eve_global.h  fileutil.h  main.cpp  main2.cpp  mp_global.h  pathutil.h  regutil.h  shutil.h  strutil.h
src/cutil/: CMakeLists.txt  cutil_global.h  cvt.h  std_cntr_util.h  std_io_file_util.cpp  std_io_file_util.h  std_io_path_util.cpp  std_io_path_util.h  std_str_util.cpp  std_str_util.h  text.h  win_cls_logger.cpp  win_cls_logger.h  win_evar_util.cpp  win_evar_util.h  win_reg_util.cpp  win_reg_util.h  win_shell_util.cpp  win_shell_util.h
third/argparse/include/argpase/: argparse.hpp
