cmake_minimum_required(VERSION 3.10)

set(CURRENT_PROJ_NAME cutil)
# set(CMAKE_MFC_FLAG 1)

set(CMAKE_CXX_STANDARD 20)
add_definitions(-DCUITL_STATIC)
add_definitions(-DUNICODE -D_UNICODE)
add_definitions(-D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE  SRC_HEADER "*.h")
FILE(GLOB_RECURSE  SRC_CPP "*.cpp")

add_library(${CURRENT_PROJ_NAME} STATIC ${SRC_HEADER} ${SRC_CPP} ${SRC_RC})
set_property(TARGET ${CURRENT_PROJ_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")



# set_target_properties(${CURRENT_PROJ_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")